# Chatbot

./: .env.dev.example  .env.example  .env.prod.example  .env.test.example  .gitignore  README.md  app.py  config.dev.yaml  config.prod.yaml  config.test.yaml  config.yaml  pyproject.toml  requirements.txt
config/: logging.yaml  presets.yaml  settings.py
database/: db.py  models.py
docs/: Git命令与操作教学.md  Step1-项目初始化教学文档.md  architecture.md  implementation-status.md  实施步骤计划.md  需求变更与扩展登记.md  需求说明文档.md
examples/: __init__.py  example1_http.py  example2_openai_sdk.py  example3_langchain.py
prompts/: preset_prompts.py
scripts/: __init__.py  init_db.py  test_chat_engine.py
services/: chat_service.py  llm_service.py  title_service.py
src/: __init__.py  main.py
src/core/: __init__.py  chat_engine.py  config_manager.py  logging_config.py  preset_manager.py  session_manager.py  user_manager.py
src/interface/: __init__.py  ui_protocol.py
src/models/: __init__.py  schemas.py
src/storage/: __init__.py  base.py  factory.py  file_backend.py  mysql_backend.py  sqlite_backend.py
src/ui/: __init__.py
src/ui/tui/: __init__.py  app.py  chat_view.py  menu_view.py  widgets.py
tests/: conftest.py  test_chat_engine.py  test_config_manager.py  test_preset_manager.py  test_session_manager.py  test_storage.py  test_user_manager.py
utils/: logger.py
