[project]
name = "langchain-chat"
version = "0.1.0"
description = "A LangChain-based multi-turn chatbot course project."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.36.0",
    "langchain>=0.2.10",
    "langchain-openai>=0.1.17",
    "python-dotenv>=1.0.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "prompt-toolkit>=3.0.52",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
